# wikianalytics

./: .gitignore  README.md  pyproject.toml  run.py
data/simulation_results/: test_positions.npy  test_positions_positions.csv  test_positions_velocities.csv
src/: config.py  create_data.py  graph_extractor.py  visualize.py
