[project]
name = "wikianalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "kaleido>=1.1.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=1.26.4",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
]
